vvs.css
html, body {
    height: 100%;
    font-size: x-large;
}

.copyright {
  position: absolute;
  z-index: -1;
  bottom: 0px;
  font-size: xx-small;
}

.clock {
    font-size: xx-large;
    width: 50%;
    text-align: right;
    overflow: hidden;
}

.next-update {
    font-size: xx-large;
    width: 40%;
    float: left;
}

.next-update.icon {
    width: 20px;
    padding-top: 4px;
    margin-right: 7px;
}

.next-update.icon.spin {
    transform: rotate(720deg);
    transition: transform 1s linear;
}

.stations {
    column-count: 2;
    -webkit-column-count: 2; /* Chrome, Safari, Opera */
    -moz-column-count: 2; /* Firefox */
}

.station {
    margin-bottom: 15px;
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid;
}

.stationName {
    background-color: #FF6600;
    border-radius: 25px;
    /* prevent text floating out of the colored area */
    padding-left: 9px;
    /* prevent text floating out of the colored area */
    padding-right: 9px;
    margin-bottom: 5px;
    font-weight: bold;
}

.connection {
    margin-left: 18px;
}

.time-span {
    width: 130px;
    display: inline-block;
}

.delay {
    color: #DC143C;
    font-weight: bold;
}

.fade-out {
    background: rgba(0, 0, 0, 1.0);
    width: 100%;
    height: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    position: fixed;
    overflow-y: hidden;
    transition: background 10s;
}

.fade-in {
    opacity: 0;
}

